--- a/netty-kafka-chat-server/build.gradle
+++ b/netty-kafka-chat-server/build.gradle
@@ -15,16 +15,27 @@ dependencies {
     implementation 'io.projectreactor.netty:reactor-netty-http:1.1.12'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.3'
 
-
     implementation 'org.slf4j:slf4j-api:2.0.9'
+
     compileOnly 'org.projectlombok:lombok:1.18.30'
-
-
     annotationProcessor('org.projectlombok:lombok:1.18.30')
-
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    testImplementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'org.flywaydb:flyway-core:9.22.3'
+    implementation 'org.postgresql:postgresql:42.6.0'
+
+
+// https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
+implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.4'
+
+
+
 }
 
 test {
