--- a/netty-kafka-chat-server/build.gradle
+++ b/netty-kafka-chat-server/build.gradle
@@ -27,9 +27,18 @@ dependencies {
     implementation 'org.flywaydb:flyway-core:9.22.3'
     implementation 'org.postgresql:postgresql:42.6.0'
 
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    implementation 'com.h2database:h2:2.2.224'
+
+// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+// https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+
 
 // https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305
-implementation 'com.google.code.findbugs:jsr305:3.0.2'
+//implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.4'
